# openai-discord-chatbot

./: chatbot.py  pyproject.toml
